fixed icon alignment

--- a/app/src/js/components/Workflows/index.css
+++ b/app/src/js/components/Workflows/index.css
@@ -200,8 +200,8 @@
     font-family: "FontAwesome";
     content: "\f067";
     font-weight: bolder;
-    top: 14px;
-    left: 14px;
+    top: 12px;
+    left: 18px;
     margin-left: 5px;
   }
 
